--- a/package.json
+++ b/package.json
@@ -59,14 +59,12 @@
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "esbuild": "^0.15.1"
   },
   "files": [
     "dist/**/*",
     "package.json"
   ],
-  "license": "MIT",
-  "dependencies": {
-    "esbuild": "^0.15.1"
-  }
+  "license": "MIT"
 }
